--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ h1 {
 h2 {
     color: maroon;
 }
+
 div {
     margin: 4px;
 }
@@ -20,3 +21,14 @@ div {
     color: gray;
 }
 
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+}
+
+#container {
+    text-align: center;
+}
